--- a/style.css
+++ b/style.css
@@ -6,11 +6,62 @@
 #def{
     text-align: center;
     color: white;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 #mid{
     text-align: center;
     color: white;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+#att{
+    text-align: center;
+    color: white;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 html body{
     background-color: #00213b;
 }
+#otpb{
+    color: white;
+    text-align: center;
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+.elso{
+    background-color: green;
+    color: white;
+}
+#szezon{
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+}
+#mpage{
+    font-size: 3em;
+    font-weight: bold;
+    color: white;
+    text-align: center;
+    
+}
+.carousel-inner img {
+    height: 500px; 
+    object-fit: cover; 
+        
+    width: 100%;
+  }
+ #Meccsek {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+  }
+  #obl{
+    font-weight: bold;
+    color: white;
+    margin-top: 1em;
+        
+  }
