--- a/style.css
+++ b/style.css
@@ -49,9 +49,8 @@ html body{
     
 }
 .carousel-inner img {
-    height: 500px; 
+    height: 600px; 
     object-fit: cover; 
-        
     width: 100%;
   }
  #Meccsek {
@@ -62,6 +61,9 @@ html body{
   #obl{
     font-weight: bold;
     color: white;
-    margin-top: 1em;
-        
+    margin-top: 1em;     
+  }
+  .nav-item{
+    background-color: white;
+    
   }
